@@ -22,6 +22,7 @@ This file documents the major additions and syntax changes between releases.
 	Fix compilation error of pst3 in Solaris 8
 	Fix check_radius returning OK on unexpected results (Craig Leres - #2911752)
 	Fix translations when extra-opts aren't enabled (Jan Wagner - #2832884)
+	Fix parsing of multi-line strings in check_snmp (broken in 1.4.14) and enhance output in such case (#2832451)
 	WARNINGS
 	Updated developer documentation to say that performance labels should not have an equals sign or
 	single quote in the label
